Archive2/3e/1cb5a73bb425a9/output
main.cpp: In function 'int main()':
main.cpp:13:4: error: expected ';' before 'while'
    while (parola !=0) {
    ^
